Fix dark mode for catatac, piratesunderfire and screampark

--- a/src/css/games/piratesunderfire.less
+++ b/src/css/games/piratesunderfire.less
@@ -26,6 +26,10 @@ html[data-theme=dark] {
 		color: var(--light-80);
 	}
 
+	.puf_sea_board_control {
+		filter: invert(1);
+	}
+
 	#puf_scoring_card,
 	#puf_sea_boards {
 		filter: var(--ext-bright);
